--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,7 @@
   
 	<!-- Google Maps -->
 	<link href="https://google-developers.appspot.com/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
-	  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPHw0_Y1SkFEsSmfX0s6nkNR6cicWF9KQ&callback=initMap">
-    </script>
+	 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPHw0_Y1SkFEsSmfX0s6nkNR6cicWF9KQ&sensor=false&libraries=visualization"></script>
 
 	<!-- Generic -->
 	<link rel="stylesheet" href="css/index.css">
