--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 	<script src="/libs/bootstrap/js/bootstrap.js"></script>
 	<link href="/libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-  
+	<!--link href="/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"-->
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-4KIc2mnKfAA7VjirNLk2Sqp7jxFNq1q8+FhYGxhW2l52lt4HJsfksL+hjswHfbl/" crossorigin="anonymous">
 	<!-- Google Maps -->
 	<link href="https://google-developers.appspot.com/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
 	 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPHw0_Y1SkFEsSmfX0s6nkNR6cicWF9KQ&sensor=false&libraries=visualization"></script>
