--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
 
 	<!-- Bootstrap -->
 	<!--http://getbootstrap.com/2.3.2/-->
-	<script src="/libs/bootstrap/js/bootstrap.js"></script>
-	<link href="/libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+	<!--script src="/libs/bootstrap/js/bootstrap.js"></script-->
+	<!--link href="/libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen"-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--link href="/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"-->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-4KIc2mnKfAA7VjirNLk2Sqp7jxFNq1q8+FhYGxhW2l52lt4HJsfksL+hjswHfbl/" crossorigin="anonymous">
 	<!-- Google Maps -->
 	<link href="https://google-developers.appspot.com/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
