--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 <body onload="initialize()">
 
-	<div class="navbar navbar-fixed-top">
+	<!--div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">        
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div-->
 
 	<div class="container">
 		<div id="map_canvas"></div>
