--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 	<!-- http://www.safe.com -->
 
 	<title>Twitter Streaming Using Node</title>
+	<script type="text/javascript"
+		alert('welcome to live stream twitter app')
+		</script>
 	<script src="../socket.io/socket.io.js"></script>
 	<!-- JQuery -->
 	<script src="/libs/jquery-1.10.1.js"></script>
