--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
 	<!-- Safe Software, 2013 -->
 	<!-- http://www.safe.com -->
 
-	<title>Twitter Streaming Using Node</title>
-	<script type="text/javascript"
-		alert('welcome to live stream twitter app')
-		</script>
+	<title>Twitter live stream by nodejs</title>
 	<script src="../socket.io/socket.io.js"></script>
 	<!-- JQuery -->
 	<script src="/libs/jquery-1.10.1.js"></script>
@@ -18,7 +15,7 @@
 	<!--script src="/libs/bootstrap/js/bootstrap.js"></script-->
 	<!--link href="/libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen"-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--link href="/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"-->
+	<link href="/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
   <!--link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-4KIc2mnKfAA7VjirNLk2Sqp7jxFNq1q8+FhYGxhW2l52lt4HJsfksL+hjswHfbl/" crossorigin="anonymous"-->
